// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BasicView Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: gray;"
        >
          <div
            class="MuiBox-root MuiBox-root-159"
          >
            <div
              class="MuiBox-root MuiBox-root-160"
            >
              <div
                class="div-root-161"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    Looks like you're the only one here,
                  </strong>
                </h5>
                <h5
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
                >
                  <strong>
                    send out this link to invite someone!
                  </strong>
                </h5>
                <h6
                  class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
                >
                  <div
                    class="MuiBox-root MuiBox-root-205 Styled(MuiBox)-root-204"
                    title="Copied!"
                  >
                    http://localhost/
                  </div>
                </h6>
              </div>
            </div>
            <div
              class="div-root-206"
            >
              <div
                class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-207 WithStyles(ForwardRef(Card))-root-208 MuiPaper-elevation10 MuiPaper-rounded"
              >
                <div
                  class="MuiBox-root MuiBox-root-238"
                >
                  <div
                    class="div-root-245"
                  >
                    <video
                      autoplay=""
                      class="makeStyles-mirroredVideo-240 makeStyles-video-239  "
                      playsinline=""
                    />
                    <div
                      class="div-root-246"
                    >
                      <div
                        class="div-root-247"
                      >
                        <div
                          class="div-root-248"
                        >
                          <svg
                            viewBox="0 0 100 100"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="50"
                              cy="50"
                              fill="#67e4a6"
                              r="NaN"
                            />
                            <circle
                              cx="50"
                              cy="50"
                              fill-opacity="0"
                              r="NaN"
                              stroke="white"
                              stroke-opacity="0.5"
                              stroke-width="4"
                            />
                          </svg>
                        </div>
                      </div>
                      <span>
                        (You)
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: gray;"
      >
        <div
          class="MuiBox-root MuiBox-root-159"
        >
          <div
            class="MuiBox-root MuiBox-root-160"
          >
            <div
              class="div-root-161"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  Looks like you're the only one here,
                </strong>
              </h5>
              <h5
                class="MuiTypography-root MuiTypography-h5 MuiTypography-colorInherit MuiTypography-alignCenter"
              >
                <strong>
                  send out this link to invite someone!
                </strong>
              </h5>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-alignCenter"
              >
                <div
                  class="MuiBox-root MuiBox-root-205 Styled(MuiBox)-root-204"
                  title="Copied!"
                >
                  http://localhost/
                </div>
              </h6>
            </div>
          </div>
          <div
            class="div-root-206"
          >
            <div
              class="MuiPaper-root MuiCard-root WithStyles(ForwardRef(Card))-root-207 WithStyles(ForwardRef(Card))-root-208 MuiPaper-elevation10 MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root-238"
              >
                <div
                  class="div-root-245"
                >
                  <video
                    autoplay=""
                    class="makeStyles-mirroredVideo-240 makeStyles-video-239  "
                    playsinline=""
                  />
                  <div
                    class="div-root-246"
                  >
                    <div
                      class="div-root-247"
                    >
                      <div
                        class="div-root-248"
                      >
                        <svg
                          viewBox="0 0 100 100"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="50"
                            cy="50"
                            fill="#67e4a6"
                            r="NaN"
                          />
                          <circle
                            cx="50"
                            cy="50"
                            fill-opacity="0"
                            r="NaN"
                            stroke="white"
                            stroke-opacity="0.5"
                            stroke-width="4"
                          />
                        </svg>
                      </div>
                    </div>
                    <span>
                      (You)
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots Chat Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
        >
          <div
            class="div-root-253"
          >
            <div
              class="div-root-254"
            />
            <div
              class="div-root-255"
            >
              <form>
                <input
                  class="input-root-256"
                  value=""
                />
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        style="height: 100vh; width: 100%; background: rgb(30, 31, 35);"
      >
        <div
          class="div-root-253"
        >
          <div
            class="div-root-254"
          />
          <div
            class="div-root-255"
          >
            <form>
              <input
                class="input-root-256"
                value=""
              />
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots DraggableSplitWrapper Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-272"
        >
          <div
            class="MuiBox-root MuiBox-root-273"
          >
            <div
              class="MuiBox-root MuiBox-root-274"
            >
              <div
                class="MuiBox-root MuiBox-root-277 Styled(MuiBox)-root-275 Styled(MuiBox)-root-276"
              >
                <div
                  class="MuiBox-root MuiBox-root-278"
                >
                  hi
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-279"
              >
                <div
                  class="div-root-280 div-root-281"
                  width="5"
                />
              </div>
              <div
                class="MuiBox-root MuiBox-root-283 Styled(MuiBox)-root-275 Styled(MuiBox)-root-282"
              >
                <div
                  class="MuiBox-root MuiBox-root-284"
                >
                  hi
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiBox-root MuiBox-root-272"
      >
        <div
          class="MuiBox-root MuiBox-root-273"
        >
          <div
            class="MuiBox-root MuiBox-root-274"
          >
            <div
              class="MuiBox-root MuiBox-root-277 Styled(MuiBox)-root-275 Styled(MuiBox)-root-276"
            >
              <div
                class="MuiBox-root MuiBox-root-278"
              >
                hi
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-279"
            >
              <div
                class="div-root-280 div-root-281"
                width="5"
              />
            </div>
            <div
              class="MuiBox-root MuiBox-root-283 Styled(MuiBox)-root-275 Styled(MuiBox)-root-282"
            >
              <div
                class="MuiBox-root MuiBox-root-284"
              >
                hi
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Storyshots ErrorPage Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="MuiTypography-root MuiTypography-body1"
        >
          <div
            class="MuiBox-root MuiBox-root-65"
          >
            Oops... The link you are trying to reach cannot be found
          </div>
          <div
            class="MuiBox-root MuiBox-root-66"
          >
            <a
              href="/"
            >
              Go Home
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="MuiTypography-root MuiTypography-body1"
      >
        <div
          class="MuiBox-root MuiBox-root-65"
        >
          Oops... The link you are trying to reach cannot be found
        </div>
        <div
          class="MuiBox-root MuiBox-root-66"
        >
          <a
            href="/"
          >
            Go Home
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
